{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 169,
  "lineage": "fe771281-bbac-11a3-d779-7b6b16f9ea2d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg_preprod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:387413415276:security-group/sg-0c786dfe866c47daf",
            "description": "Load Balancer security group for Cluster Kairos FE",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow All Traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c786dfe866c47daf",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Allow All Traffic from Unit",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4100
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Allow All Traffic from Unit",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5999
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Allow All Traffic from Unit",
                "from_port": 7000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7999
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "Allow All Traffic from Unit",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9999
              },
              {
                "cidr_blocks": [
                  "10.1.128.0/18"
                ],
                "description": "Allow All Traffic from HO",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.100.196.0/22"
                ],
                "description": "Allow All Traffic from MySiloam Preprod",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.100.208.0/24"
                ],
                "description": "Allow All Traffic from Private \u0026 Protected",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.100.209.0/24"
                ],
                "description": "Allow All Traffic from Private \u0026 Protected",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.100.210.0/24"
                ],
                "description": "Allow All Traffic from Private \u0026 Protected",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.100.211.0/26"
                ],
                "description": "Allow All Traffic from Private \u0026 Protected",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.100.211.128/26"
                ],
                "description": "Allow All Traffic from Private \u0026 Protected",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.100.211.64/26"
                ],
                "description": "Allow All Traffic from Private \u0026 Protected",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "kairos-fe-lb-alb-internal-sg-iac",
            "name_prefix": "",
            "owner_id": "387413415276",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-079fbf10a5eb9468f"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.alb_private",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "log-kairos-fe-lb-alb-internal-iac",
                "enabled": true
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:loadbalancer/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7",
            "arn_suffix": "app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7",
            "connection_logs": [
              {
                "bucket": "log-conn-kairos-fe-lb-alb-internal-iac",
                "enabled": true
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-kairos-fe-lb-alb-internal-iac-1329979320.ap-southeast-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:loadbalancer/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "kairos-fe-lb-alb-internal-iac",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a2a8040de3ebf667",
              "sg-0c786dfe866c47daf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-065675c9892dc6068"
              },
              {
                "subnet_id": "subnet-092c7acfd0ca847a1"
              },
              {
                "subnet_id": "subnet-0a4c5be8c1c9f6c77"
              }
            ],
            "subnets": [
              "subnet-065675c9892dc6068",
              "subnet-092c7acfd0ca847a1",
              "subnet-0a4c5be8c1c9f6c77"
            ],
            "tags": {
              "Name": "kairos-fe-lb-alb-internal-iac"
            },
            "tags_all": {
              "Name": "kairos-fe-lb-alb-internal-iac"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-079fbf10a5eb9468f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z08888821HLRG5A9ZRTER"
          },
          "dependencies": [
            "aws_security_group.alb_sg_preprod",
            "module.alb_private.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_private",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:listener/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7/5fe366e44d6b4381",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:targetgroup/dummy-tg/22c2923636304018",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:listener/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7/5fe366e44d6b4381",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:loadbalancer/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_preprod",
            "module.alb_private.aws_lb.this",
            "module.alb_private.aws_lb_target_group.main",
            "module.alb_private.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_private",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:listener/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7/8e6107e08c43dbed",
            "certificate_arn": "arn:aws:acm:ap-southeast-3:387413415276:certificate/0375aa5c-03e0-4ef5-8490-834ec85586b0",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:targetgroup/dummy-tg/22c2923636304018",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:listener/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7/8e6107e08c43dbed",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:loadbalancer/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_preprod",
            "module.alb_private.aws_lb.this",
            "module.alb_private.aws_lb_target_group.main",
            "module.alb_private.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_private",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "http_tcp_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:listener-rule/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7/5fe366e44d6b4381/2c898b4bdb88bb37",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "*.siloamhospitals.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:listener-rule/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7/5fe366e44d6b4381/2c898b4bdb88bb37",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:listener/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7/5fe366e44d6b4381",
            "priority": 32,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_preprod",
            "module.alb_private.aws_lb.this",
            "module.alb_private.aws_lb_listener.frontend_http_tcp",
            "module.alb_private.aws_lb_target_group.main",
            "module.alb_private.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_private",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "https_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:targetgroup/pas-kairos-fe-main-web-tg-iac/ff2439e292feeb3c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:listener-rule/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7/8e6107e08c43dbed/c6b75c35ddacedbf",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "preprd-pas-kairos.siloamhospitals.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:listener-rule/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7/8e6107e08c43dbed/c6b75c35ddacedbf",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:listener/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7/8e6107e08c43dbed",
            "priority": 93,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_preprod",
            "module.alb_private.aws_lb.this",
            "module.alb_private.aws_lb_listener.frontend_https",
            "module.alb_private.aws_lb_target_group.main",
            "module.alb_private.aws_security_group.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:targetgroup/pay-kairos-ui-tg-iac/3dc6e1abf26fa39f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:listener-rule/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7/8e6107e08c43dbed/146a5d4324176b45",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "preprd-pay-kairos.siloamhospitals.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:listener-rule/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7/8e6107e08c43dbed/146a5d4324176b45",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:listener/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7/8e6107e08c43dbed",
            "priority": 94,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_preprod",
            "module.alb_private.aws_lb.this",
            "module.alb_private.aws_lb_listener.frontend_https",
            "module.alb_private.aws_lb_target_group.main",
            "module.alb_private.aws_security_group.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:targetgroup/apm-tg-iac/77353fda77d154f7",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:listener-rule/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7/8e6107e08c43dbed/b02f73adc90713c6",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "preprd-apm-kairos.siloamhospitals.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:listener-rule/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7/8e6107e08c43dbed/b02f73adc90713c6",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:listener/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7/8e6107e08c43dbed",
            "priority": 95,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg_preprod",
            "module.alb_private.aws_lb.this",
            "module.alb_private.aws_lb_listener.frontend_https",
            "module.alb_private.aws_lb_target_group.main",
            "module.alb_private.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb_private",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:targetgroup/dummy-tg/22c2923636304018",
            "arn_suffix": "targetgroup/dummy-tg/22c2923636304018",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:targetgroup/dummy-tg/22c2923636304018",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:loadbalancer/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dummy-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dummy-tg"
            },
            "tags_all": {
              "Name": "dummy-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-079fbf10a5eb9468f"
          },
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:targetgroup/pas-kairos-fe-main-web-tg-iac/ff2439e292feeb3c",
            "arn_suffix": "targetgroup/pas-kairos-fe-main-web-tg-iac/ff2439e292feeb3c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:targetgroup/pas-kairos-fe-main-web-tg-iac/ff2439e292feeb3c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:loadbalancer/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pas-kairos-fe-main-web-tg-iac",
            "port": 9901,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "pas-kairos-fe-main-web-tg-iac"
            },
            "tags_all": {
              "Name": "pas-kairos-fe-main-web-tg-iac"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-079fbf10a5eb9468f"
          },
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:targetgroup/pay-kairos-ui-tg-iac/3dc6e1abf26fa39f",
            "arn_suffix": "targetgroup/pay-kairos-ui-tg-iac/3dc6e1abf26fa39f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:targetgroup/pay-kairos-ui-tg-iac/3dc6e1abf26fa39f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:loadbalancer/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "pay-kairos-ui-tg-iac",
            "port": 9902,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "pay-kairos-ui-tg-iac"
            },
            "tags_all": {
              "Name": "pay-kairos-ui-tg-iac"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-079fbf10a5eb9468f"
          },
          "create_before_destroy": true
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:targetgroup/apm-tg-iac/77353fda77d154f7",
            "arn_suffix": "targetgroup/apm-tg-iac/77353fda77d154f7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/apm/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:targetgroup/apm-tg-iac/77353fda77d154f7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:loadbalancer/app/kairos-fe-lb-alb-internal-iac/a3623089a454e7d7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "apm-tg-iac",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "apm-tg-iac"
            },
            "tags_all": {
              "Name": "apm-tg-iac"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-079fbf10a5eb9468f"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb_private",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "3.apm",
          "schema_version": 0,
          "attributes": {
            "availability_zone": "all",
            "id": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:targetgroup/apm-tg-iac/77353fda77d154f7-20240424052308431400000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-3:387413415276:targetgroup/apm-tg-iac/77353fda77d154f7",
            "target_id": "10.100.3.7"
          },
          "dependencies": [
            "module.alb_private.aws_lambda_permission.lb",
            "module.alb_private.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb_private",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-3:387413415276:security-group/sg-0a2a8040de3ebf667",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a2a8040de3ebf667",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.128.0/18"
                ],
                "description": "Allow from HO/VPN",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "kairos-fe-lb-alb-internal-iac-20240404070044757600000001",
            "name_prefix": "kairos-fe-lb-alb-internal-iac-",
            "owner_id": "387413415276",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kairos-fe-lb-alb-internal-iac"
            },
            "tags_all": {
              "Name": "kairos-fe-lb-alb-internal-iac"
            },
            "timeouts": null,
            "vpc_id": "vpc-079fbf10a5eb9468f"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    }
  ]
}